# troll

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  skill.md
configs/: default.yaml  providers.yaml
troll/: __init__.py
troll/artifacts/: __init__.py  manager.py
troll/core/: __init__.py  budgets.py  config.py  orchestrator.py
troll/interfaces/: __init__.py  agent_wrapper.py  cli.py  rest.py
troll/memory/: __init__.py  store.py
troll/perception/: __init__.py  frame_parser.py
troll/providers/: __init__.py  router.py
troll/reasoning/: __init__.py  council.py
troll/search/: __init__.py  engine.py
